[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shannon"
authors = [{name = "Aryn Inc."}]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiosignal==1.3.1",
    "annotated-types==0.5.0",
    "anyio==3.7.1",
    "argilla==1.12.0",
    "attrs==23.1.0",
    "backoff==2.2.1",
    "certifi==2023.5.7",
    "cffi==1.15.1",
    "chardet==5.1.0",
    "charset-normalizer==3.1.0",
    "click==8.1.4",
    "commonmark==0.9.1",
    "cryptography==41.0.1",
    "Deprecated==1.2.14",
    "et-xmlfile==1.1.0",
    "exceptiongroup==1.1.2",
    "filelock==3.12.2",
    "filetype==1.2.0",
    "frozenlist==1.3.3",
    "fsspec==2023.6.0",
    "grpcio==1.49.1",
    "h11==0.14.0",
    "httpcore==0.16.3",
    "httpx==0.23.3",
    "huggingface-hub==0.16.2",
    "idna==3.4",
    "iniconfig==2.0.0",
    "Jinja2==3.1.2",
    "joblib==1.3.1",
    "jsonschema==4.18.0",
    "jsonschema-specifications==2023.6.1",
    "lxml==4.9.3",
    "Markdown==3.4.3",
    "MarkupSafe==2.1.3",
    "mccabe==0.6.1",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "msg-parser==1.2.0",
    "msgpack==1.0.5",
    "networkx==3.1",
    "nltk==3.8.1",
    "numpy==1.23.5",
    "olefile==0.46",
    "openpyxl==3.1.2",
    "opensearch-py==2.2.0",
    "packaging==23.1",
    "pandas==1.5.3",
    "pdf2image==1.16.3",
    "pdfminer.six==20221105",
    "Pillow==10.0.0",
    "pluggy==1.2.0",
    "protobuf==4.23.4",
    "pyarrow==12.0.1",
    "pycodestyle==2.8.0",
    "pycparser==2.21",
    "pydantic==1.10.11",
    "pydantic_core==2.1.2",
    "pyflakes==2.4.0",
    "Pygments==2.15.1",
    "pypandoc==1.11",
    "pypdf==3.12.1",
    "python-dateutil==2.8.2",
    "python-docx==0.8.11",
    "python-magic==0.4.27",
    "python-pptx==0.6.21",
    "pytz==2023.3",
    "PyYAML==6.0",
    "ray==2.5.1",
    "referencing==0.29.1",
    "regex==2023.6.3",
    "requests==2.31.0",
    "rfc3986==1.5.0",
    "rich==13.0.1",
    "rpds-py==0.8.8",
    "safetensors==0.3.1",
    "scikit-learn==1.3.0",
    "scipy==1.11.1",
    "sentence-transformers==2.2.2",
    "sentencepiece==0.1.99",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sympy==1.12",
    "tabulate==0.9.0",
    "threadpoolctl==3.1.0",
    "tokenizers==0.13.3",
    "tomli==2.0.1",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "tqdm==4.65.0",
    "transformers==4.30.2",
    "typer==0.7.0",
    "typing_extensions==4.7.1",
    "unstructured==0.7.12",
    "urllib3==1.26.16",
    "wrapt==1.14.1",
    "xlrd==2.0.1",
    "XlsxWriter==3.1.2"
]

[project.optional-dependencies]
development = [
    "flake8==4.0.1",
    "pytest==7.4.0",
    "pytest-flake8==1.1.1",
    "pytest-mock==3.11.1"
]