[tool.poetry]
name = "sycamore"
version = "0.1.0"
description = ""
authors = ["aryn.ai"]
readme = "README.md"
repository = "https://github.com/aryn-ai/sycamore.git"

[tool.poetry.dependencies]
python = "^3.10"
opensearch-py = "^2.2.0"
pandas = "2.0.3"
pdf2image = "^1.16.3"
ray = "2.6.3"
sentence-transformers = "2.2.2"
pyarrow = "12.0.1"
unstructured = "0.8.0"
bs4 = "^0.0.1"
[tool.poetry.group.test.dependencies]
flake8 = "4.0.1"
pytest = "7.4.0"
pytest-mock = "3.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
