[tool.poetry]
name = "ingest_ntsb_data"
version = "0.1.0"
description = ""
authors = ["Matt Welsh <matt@aryn.ai>"]
packages = [{include = "ingest_ntsb_data"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sycamore-ai = { path = "../../lib/sycamore", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4"
sycamore-poetry-lock = { path = "../../lib/poetry-lock", develop = true }

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
