[project]
name = "integration"
version = "0.1.0"
description = "Integration Testing for Sycamore"
authors = [{ name = "aryn.ai", email = "opensource@aryn.ai" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "docker>=7.0.0,<8",
    "pytest==7.4.0",
    "opensearch-py>=2.5.0,<3",
    "testcontainers>=4.3.1,<5",
    "sycamore-uv-lock",
]

[tool.uv]

[tool.uv.sources]
sycamore-uv-lock = { path = "../../lib/uv-lock", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
