[project]
name = "sycamore-jupyter"
version = "0.0.1"
description = "Jupyter container with sycamore preinstalled"
authors = [{ name = "aryn.ai", email = "opensource@aryn.ai" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
dependencies = [
    "sycamore-ai[opensearch]>=0.1.13,<0.2",
    "jupyterlab>=4.0.11,<5",
    "jupyter-lsp>=2.2.2,<3",
    "ipywidgets>=8.1.0,<9",
    "notebook>=7.1.2,<8",
]

[project.urls]
Repository = "https://github.com/aryn-ai/sycamore.git"

[dependency-groups]
dev = ["sycamore-ai"]
sycamore_uv_lock = ["sycamore-uv-lock"]

[tool.uv]
default-groups = [
    "dev",
    "sycamore_uv_lock",
]

[tool.uv.sources]
sycamore-ai = { path = "../../lib/sycamore", editable = true }
sycamore-uv-lock = { path = "../../lib/uv-lock", editable = true }
