[tool.poetry]
name = "query-demo"
version = "0.1.0"
description = ""
authors = ["Matt Welsh <matt@aryn.ai>"]
packages = [{include = "querydemo"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sycamore-ai = { path = "../../lib/sycamore", develop = true, extras=["opensearch"] }
streamlit = "^1.36.0"
streamlit-ace = "^0.1.1"
streamlit-agraph = "^0.0.45"
streamlit-pdf-viewer = "^0.0.17"
boto3 = "^1.35.10"
marko = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
sycamore-poetry-lock = { path = "../../lib/poetry-lock", develop = true }

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
