[tool.poetry]
name = "queryeval"
version = "0.1.0"
description = ""
authors = ["Matt Welsh <matt@aryn.ai>"]
packages = [{include = "queryeval"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
sycamore-ai = { path = "../../lib/sycamore", develop = true, extras = ["opensearch", "local-inference"] }
ragas = { version = "^0.2.6", extras = ["all"] }
pydantic-yaml = "^1.3.0"
pydantic = "^2.8.2"
rich = "^13.7.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
sycamore-poetry-lock = { path = "../../lib/poetry-lock", develop = true }

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
