[tool.poetry]
name = "aryn-sdk"
version = "0.1.9"
description = "The client library for Aryn services"
authors = ["aryn.ai <opensource@aryn.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32"
pandas = ">=2.0"
numpy = ">=1.21.5"
pyyaml = "^6.0.1"
pdf2image = "^1.16.3"
pillow = ">=9.4.0"

# To make sure this dir has consistent lock entries to the sycamore dir,
# add ",<3.13" to the above python dependency and uncomment the following
#
# [tool.poetry.group.dev.dependencies]
# sycamore-poetry-lock = { path = "../../lib/poetry-lock", develop = true }
packaging = "^24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
