[project]
name = "aryn-sdk"
version = "0.1.14"
description = "The client library for Aryn services"
authors = [{ name = "aryn.ai", email = "opensource@aryn.ai" }]
requires-python = ">=3.9"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "requests~=2.32",
    "pandas>=2.0",
    "numpy>=1.21.5",
    "pyyaml>=6.0.1,<7",
    "pdf2image>=1.16.3,<2",
    "pillow>=11.1.0",
    "packaging~=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["partition"]