[tool.poetry]
name = "import_timer"
version = "0.0.1"
description = "Import timing library"
authors = ["aryn.ai <opensource@aryn.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
