[project]
name = "sycamore_poetry_lock"
version = "0.0.1"
description = "A fake meta-package to make it easier to force different poetry directories to lock to the same version."
authors = [{ name = "aryn.ai", email = "opensource@aryn.ai" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
dependencies = [
    "protobuf==4.25.3",
    "fsspec==2024.2.0",
    "pytest==7.4.0",
    "guidance==0.1.14",
    "ray==2.36.0",
    "pandas==2.1.1",
    "weaviate-client==4.6.4",
    "scipy==1.13.1",
    "networkx==3.2.1",
    "ipython==8.18.1",
    "matplotlib==3.9.0",
    "aiohttp>=3.10.11",
    "nltk>3.9.0",
    "scrapy>=2.11.2",
    "jinja2>=3.1.5",
]

[project.urls]
Repository = "https://github.com/aryn-ai/sycamore.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

