[tool.poetry]
name = "sycamore_poetry_lock"
version = "0.0.1"
description = "A fake meta-package to make it easier to force different poetry directories to lock to the same version."
authors = ["aryn.ai <opensource@aryn.ai>"]
readme = "README.md"
repository = "https://github.com/aryn-ai/sycamore.git"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
# required older version
fsspec = "2024.2.0"   # sycamore (via datasets)
# Make sure tests are run in the same order.
# the following will fail which prevents upgrading pytest to 8.1.1
# poetry run pytest lib/sycamore/sycamore/tests/unit/scans/test_materialized_scan.py lib/sycamore/sycamore/tests/unit/test_docset.py
pytest = "7.4.0"
guidance = "0.1.14" # They removed AzureOpenAIChat in https://github.com/guidance-ai/guidance/commit/a75896a851edf8b3cf15534af4fed8d15f277af1
ray = "^2.52.1" 
pandas = "2.3.0" # Bumped to a version that supports 3.13.
scipy = "^1.15.0"
weaviate-client = "^4.16.10"
protobuf = "^5.29.5"
urllib3 = "^2.6.3"

# Required to continue supporting python 3.9; it may be possible to make these a bit more
# current, but latest version no longer supports 3.9
networkx = "3.2.1"
ipython = "8.18.1"
onnxruntime = "1.22.0" # Used by Unstructured. Necessary for python 3.13
onnx = "1.18.0"

# Package versions from being yanked
matplotlib = "3.10.3"


# Package versions specified because of github vulnerability reports
aiohttp = "^3.13.3"
authlib = "^1.6.6"
nltk = ">3.9.0"
requests = "^2.32.4"
scrapy = ">=2.13.4"
jinja2 = ">=3.1.6" # pinned for security reasons
cryptography = ">=44.0.1"
tornado = ">=6.5.0"
pillow = "^11.3.0"
# black = ">=24.3.0"
fonttools = "^4.60.2"
filelock = "^3.20.3"

httpcore = ">=1.0.9"
setuptools = ">=78.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

