[project]
name = "remote-processors"
version = "0.1.0"
description = "A service for hosting search processors extrnal to opensearch"
authors = [{ name = "HenryL27", email = "hmlindeman@yahoo.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.1,<7",
    "grpcio>=1.60.0,<2",
    "cbor2>=5.6.0,<6",
    "sycamore-ai>=0.1.13,<0.2",
    "protobuf==4.25.3",
]

[dependency-groups]
test = [
    "pytest~=7.4",
    "pytest-mock>=3.12.0,<4",
    "docker>=7.0.0,<8",
    "opensearch-py>=2.4.2,<3",
]
dev = [
    "sycamore-ai",
    "sycamore-uv-lock",
]
build = [
    "grpcio-tools>=1.60.1,<2",
    "protoletariat>=3.2.19,<4",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
    "build",
]

[tool.uv.sources]
sycamore-ai = { path = "../sycamore", editable = true }
sycamore-uv-lock = { path = "../../lib/uv-lock", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "processor_name: marks integ test with name of processor to test",
]
